k8s-deploy/k8s-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-redis
  labels:
    app: k8s-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-redis
  template:
    metadata:
      name: k8s-redis
      labels:
        app: k8s-redis
    spec:
      containers:
        - name: k8s-redis
          image: redis:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
      restartPolicy: Always
