k8s-deploy/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-mysql
spec:
  selector:
    app: k8s-mysql
  ports:
    - protocol: TCP
      port: 13306
      targetPort: 3306
      nodePort: 31306
  type: NodePort
