k8s-deploy/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-redis
spec:
  selector:
    app: k8s-redis
  ports:
    - protocol: TCP
      port: 16379
      targetPort: 6379
      nodePort: 31379
  type: NodePort
